# voluntary-work-calendar

./: .gitignore  README.md  pyproject.toml
.streamlit/: config.toml
src/voluntary_work_calendar/: app.py  config.py  menu.py  utils.py
src/voluntary_work_calendar/auth/: authorization.py  password.py
src/voluntary_work_calendar/db/: crud.py  database.py  gateway.py  local.py  main.py  models.py  schemas.py
src/voluntary_work_calendar/pages/: 0_login.py  0_logout.py  0_not_logged.py  1_calendar.py  2_insert.py  3_delete.py  4_admin.py
tests/test_voluntary_work_calendar/test_auth/: test_authorization.py
tests/test_voluntary_work_calendar/test_db/: test_gateway.py
