[tool.poetry]
name = "voluntary-work-calendar"
version = "0.1.0"
description = ""
authors = ["Salvatore Albore <salvatore.albore@gmail.com>"]
license = "GNU GPLv3"

[tool.poetry.dependencies]
python=">=3.8,<3.9.7 || >3.9.7,<3.11"
SQLAlchemy = "^1.4.20"
python-dateutil = "^2.8.2"
sqlalchemy-migrate = "^0.13.0"
matplotlib = "^3.5.1"
streamlit = "^1.27.2"
alembic = "^1.12.1"
psycopg2-binary = "^2.9.9"
seaborn = "^0.13.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
st-annotated-text = "^4.0.1"
pydantic = "^2.7.1"
python-dotenv = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^23.11.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
